Changed the views up a bit, added item/list view

--- a/app/views/_user_bar.html.slim
+++ b/app/views/_user_bar.html.slim
@@ -2,4 +2,5 @@ div
   = "Welcome #{current_user.name}"
 
 div
+  = link_to "View Profile", user_path(current_user)
   = link_to "Sign out", :destroy_user_session
