--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,1 @@
-h1
-  = "It's a Teacup!"
-
-- if user_signed_in?
-  = render "/user_bar"
-- else
-  = render "/login"
+= link_to "View items", 'items/list'
