--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,10 +1,10 @@
 table
-  td
-    tr.name = "Name"
-    tr.description = "Desription"
-    tr.price = "Price"
+  tr
+    td.name Name
+    td.description Desription
+    td.price Price
   - Item.all.each do |item|
-    td
-      tr.name = item.name
-      tr.description = item.description
-      tr.price = "R #{item.price}"
+    tr
+      td.name = item.name
+      td.description = item.description
+      td.price = "R #{item.price}"
