Made the views more structured

--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -8,3 +8,4 @@ table
       td.name = item.name
       td.description = item.description
       td.price = "R #{item.price}"
+      td.buy = link_to "Add to cart", '#'
