--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -1,11 +1,11 @@
 table
   tr
-    td.name Name
-    td.description Desription
-    td.price Price
-  - Item.all.each do |item|
+    td Name
+    td Desription
+    td Price
+  - @items.each do |item|
     tr
       td.name = item.name
       td.description = item.description
       td.price = "R #{item.price}"
-      td.buy = link_to "Add to cart", '#'
+      td.buy = link_to "Add to Cart", '#'
