Fixed bug in cart

--- a/app/views/_user_bar.html.slim
+++ b/app/views/_user_bar.html.slim
@@ -6,6 +6,8 @@ h3
   = link_to "View Profile", user_path(current_user)
   |  | 
   = link_to "Sign out", :destroy_user_session
+  |  | 
+  = link_to "View Cart", cart_index_url
 - else
   = link_to "Log in with facebook", user_omniauth_authorize_path(:facebook)
   |  | 
