--- a/app/views/cart/index.html.slim
+++ b/app/views/cart/index.html.slim
@@ -2,12 +2,16 @@
   | No items in your cart
 - else
   table
+    tr
+      td Name
+      td Quantity
+      td Price
     - @cart.each_item do |cart_item|
       tr
         td = cart_item.item.name
         td = cart_item.quantity
-        td = cart_item.price
+        td = "R #{cart_item.price}"
     tr
       td Total
       td = @cart.quantity
-      td = @cart.price
+      td = "R #{@cart.price}"
