--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -5,7 +5,7 @@ table
     td Price
   - @items.each do |item|
     tr
-      td.name = item.name
-      td.description = item.description
-      td.price = "R #{item.price}"
-      td.buy = link_to "Add to Cart", '#'
+      td = item.name
+      td = item.description
+      td = "R #{item.price}"
+      td = link_to "Add to Cart", add_to_cart_url(item)
