Added item counter to view cart link

--- a/app/views/_user_bar.html.slim
+++ b/app/views/_user_bar.html.slim
@@ -11,4 +11,4 @@ h3
   |  | 
   = link_to "Log in with Google", user_omniauth_authorize_path(:google_oauth2)
 |  | 
-= link_to "View Cart", cart_index_url
+= render 'cart/user_bar_cart'
